Migrate from Playwright to Node.js built-in test runner
- Convert all test files to use node:test and node:assert/strict
- Create copy-tests.js script in each epicshop/ to propagate tests from solution to problem directories
- Add test scripts to all exercise package.json files
- Remove Playwright config and test files
- Update GitHub Actions workflow to use Node test runner

Test files now use top-level await with test() calls.

--- a/exercises/02.access-modifiers/02.problem.protected/package.json
+++ b/exercises/02.access-modifiers/02.problem.protected/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_02.access-modifiers_02.problem.protected",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
