--- a/exercises/02.access-modifiers/01.solution.public-private/package.json
+++ b/exercises/02.access-modifiers/01.solution.public-private/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_02.access-modifiers_01.solution.public-private",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
