--- a/exercises/03.interfaces-and-classes/01.solution.implementing-interfaces/package.json
+++ b/exercises/03.interfaces-and-classes/01.solution.implementing-interfaces/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_03.interfaces-and-classes_01.solution.implementing-interfaces",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
