--- a/exercises/03.interfaces-and-classes/02.solution.programming-to-abstractions/package.json
+++ b/exercises/03.interfaces-and-classes/02.solution.programming-to-abstractions/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_03.interfaces-and-classes_02.solution.programming-to-abstractions",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
