--- a/exercises/04.inheritance/02.problem.method-overriding/package.json
+++ b/exercises/04.inheritance/02.problem.method-overriding/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_04.inheritance_02.problem.method-overriding",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
