--- a/exercises/05.polymorphism/01.problem.substitutability/package.json
+++ b/exercises/05.polymorphism/01.problem.substitutability/package.json
@@ -2,6 +2,7 @@
   "name": "exercises_05.polymorphism_01.problem.substitutability",
   "type": "module",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node index.ts",
+    "test": "node --test index.test.ts"
   }
 }
