refactor: switch to export-based evaluation pattern
- Replace console.log Results output with direct exports
- Rewrite tests to import modules directly instead of parsing stdout
- Add export instructions with 🐨 and 💰 hints in problem files
- Add helpful 🚨 error messages for common mistakes
- Fix interface export issue (interfaces are type-only, not runtime values)

--- a/exercises/01.classes/02.solution.constructors/package.json
+++ b/exercises/01.classes/02.solution.constructors/package.json
@@ -2,7 +2,7 @@
   "name": "exercises_01.classes_02.solution.constructors",
   "type": "module",
   "scripts": {
-    "start": "node index.ts",
-    "test": "node --experimental-transform-types --test index.test.ts"
+    "start": "npx @kentcdodds/log-module@latest ./index.ts",
+    "test": "node --test index.test.ts"
   }
 }
