--- a/exercises/01.classes/01.problem.class-basics/package.json
+++ b/exercises/01.classes/01.problem.class-basics/package.json
@@ -2,7 +2,7 @@
   "name": "exercises_01.classes_01.problem.class-basics",
   "type": "module",
   "scripts": {
-    "start": "node index.ts",
+    "start": "npx @kentcdodds/log-module@latest ./index.ts",
     "test": "node --test index.test.ts"
   }
 }
