--- a/exercises/05.composition-vs-inheritance/01.solution.when-to-use/package.json
+++ b/exercises/05.composition-vs-inheritance/01.solution.when-to-use/package.json
@@ -2,7 +2,7 @@
   "name": "exercises_05.composition-vs-inheritance_01.solution.when-to-use",
   "type": "module",
   "scripts": {
-    "start": "node index.ts",
+    "start": "npx @kentcdodds/log-module@latest ./index.ts",
     "test": "node --test index.test.ts"
   }
 }
