feat: add private fields and default parameters to classes, update README and tests

--- a/exercises/01.classes/02.problem.private-fields-and-defaults/package.json
+++ b/exercises/01.classes/02.problem.private-fields-and-defaults/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.classes_02.solution.constructors",
+  "name": "exercises_01.classes_02.problem.private-fields-and-defaults",
   "type": "module",
   "scripts": {
     "start": "npx @kentcdodds/log-module@latest ./index.ts",
