--- a/exercises/01.classes/02.solution.private-fields-and-defaults/package.json
+++ b/exercises/01.classes/02.solution.private-fields-and-defaults/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_01.classes_02.problem.constructors",
+  "name": "exercises_01.classes_02.solution.private-fields-and-defaults",
   "type": "module",
   "scripts": {
     "start": "npx @kentcdodds/log-module@latest ./index.ts",
