--- a/exercises/04.composition-vs-inheritance/02.problem.dependency-injection/package.json
+++ b/exercises/04.composition-vs-inheritance/02.problem.dependency-injection/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_03.inheritance_01.solution.extends",
+  "name": "exercises_04.composition-vs-inheritance_02.problem.dependency-injection",
   "type": "module",
   "scripts": {
     "start": "npx @kentcdodds/log-module@latest ./index.ts",
