--- a/exercises/04.composition-vs-inheritance/02.solution.dependency-injection/package.json
+++ b/exercises/04.composition-vs-inheritance/02.solution.dependency-injection/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exercises_05.composition-vs-inheritance_01.solution.when-to-use",
+  "name": "exercises_04.composition-vs-inheritance_02.solution.dependency-injection",
   "type": "module",
   "scripts": {
     "start": "npx @kentcdodds/log-module@latest ./index.ts",
